--- a/index.html
+++ b/index.html
@@ -3,47 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon Portfolio</title>
+  <title>Portfolio SPA</title>
   <link rel="stylesheet" href="css/main.css">
+  <script defer src="js/main.js"></script>
+  <script defer src="js/home.js"></script>
+  <script defer src="js/about.js"></script>
+  <script defer src="js/projects.js"></script>
+  <script defer src="js/skills.js"></script>
+  <script defer src="js/contact.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
+<body>
+  <header class="header flex justify-between">
+  <a href="#home" class="logo" id="logo-link" style="cursor:pointer;">My Portfolio</a>
+    <nav class="nav">
+      <a href="#home" class="nav-link">Home</a>
+      <a href="#about" class="nav-link">About</a>
+      <a href="#projects" class="nav-link">Projects</a>
+      <a href="#skills" class="nav-link">Skills</a>
+      <a href="#contact" class="nav-link">Contact</a>
+    </nav>
+  </header>
 
-  <!-- Navigation -->
-  <nav class="fixed top-0 left-0 w-full bg-white shadow p-4 flex justify-between z-50">
-    <div class="text-xl font-bold">Mon Portfolio</div>
-    <ul class="flex space-x-4">
-      <li><a href="#home" class="nav-link hover:text-blue-500">Home</a></li>
-      <li><a href="#about" class="nav-link hover:text-blue-500">About</a></li>
-      <li><a href="#projects" class="nav-link hover:text-blue-500">Projects</a></li>
-      <li><a href="#skills" class="nav-link hover:text-blue-500">Skills</a></li>
-      <li><a href="#contact" class="nav-link hover:text-blue-500">Contact</a></li>
-    </ul>
-  </nav>
+  <main>
+    <section id="home" class="page"> 
+    </section>
 
-  <!-- Sections -->
-  <section id="home" class="h-screen flex flex-col items-center justify-center text-center">
-    <h1 class="text-5xl font-bold mb-4">Welcome to my Portfolio</h1>
-    <p class="text-xl text-gray-600">I'm a student who learns to be a web developer</p>
-  </section>
+    <section id="about" class="page" style="display:none;">
+    </section>
 
-  <section id="about" class="h-screen flex flex-col items-center justify-center text-center bg-gray-50">
-    <h2 class="text-4xl font-bold mb-4">About Me</h2>
-  </section>
+    <section id="projects" class="page" style="display:none;">
+    </section>
 
-  <section id="projects" class="h-screen flex flex-col items-center justify-center text-center">
-    <h2 class="text-4xl font-bold mb-4">Projects</h2>
-  </section>
+    <section id="skills" class="page" style="display:none;">
+    </section>
 
-  <section id="skills" class="h-screen flex flex-col items-center justify-center text-center bg-gray-50">
-    <h2 class="text-4xl font-bold mb-4">Skills</h2>
-  </section>
+    <section id="contact" class="page" style="display:none;">
+    </section>
+  </main>
 
-  <section id="contact" class="h-screen flex flex-col items-center justify-center text-center">
-    <h2 class="text-4xl font-bold mb-4">Contact</h2>
-  </section>
-
-  <script src="js/main.js"></script>
+  <footer class="footer">
+    <div class="flex justify-between">
+      <div>
+        <p>42Project Portfolio</p>
+        <p>Showcasing technical expertise and projects from School 42 with clean, professional presentation.</p>
+      </div>
+      <div class="flex flex-row gap-6">
+        <nav class="flex flex-col">
+          <a class="text-xl font-bold">Navigate</a>
+          <a href="#home" class="nav-link">Home</a>
+          <a href="#about" class="nav-link">About</a>
+          <a href="#projects" class="nav-link">Projects</a>
+          <a href="#skills" class="nav-link">Skills</a>
+          <a href="#contact" class="nav-link">Contact</a>
+        </nav>
+        <nav class="flex flex-col ">
+          <a class="text-xl font-bold">Connect</a>
+          <a href="#about" class="nav-link">GitHub</a>
+          <a href="#projects" class="nav-link">Mail</a>
+          <a href="#skills" class="nav-link">LinkedIn</a>
+        </nav>
+      </div>
+    </div>
+    <p class="mt-8">© 2025 My Portfolio. All rights reserved.</p>
+  </footer>
 </body>
 </html>
