add animation fade in

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Portfolio</title>
 
     <script defer src="js/translations.js"></script>
+    <script defer src="js/animations.js"></script>
     <script defer src="js/main.js"></script>
     <script defer src="js/home.js"></script>
     <script defer src="js/about.js"></script>
